lavfi/overlay: add logic for avoiding overlaying frames with PTS > main frame PTS

Also add debug logging messages for helping tracking down similar
issues.

Fix trac ticket #467.